--- a/public_html/CSS/functions.css
+++ b/public_html/CSS/functions.css
@@ -18,23 +18,44 @@ and open the template in the editor.
 	-moz-transition: all 0.5s;
 }
 **/
+
+.grandparent li{float: left; text-align: center;
+	 list-style-type: none; 
+	position: relative; 
+	padding: 20px 5px 10 5px;
+}
+
 .first_gen{
     
     float: left; text-align: center;
 	 list-style-type: none; 
 	position: relative; 
-	padding: 20px 5px 10 5px; 
+	padding: 20px 0px 10 5px; 
+        
+        
 	
     
 }
+
 /**
-.first_gen {
-    width: 80px;
-    height: 40px;
-    border: 5px solid blue;
-border-radius: 5px;
+.first_gen{
+    
+    border: 1px solid #ccc;
+	padding: 5px 10px;
+	text-decoration: none;
+	color: #666;
+	font-family: arial, verdana, tahoma;
+	font-size: 11px;
+	display: inline-block;
+	
+	border-radius: 5px;
 }
 **/
+
+.first_gen li:hover {
+        	background: #c8e4f8; color: #000; border: 1px solid #94a0b4;
+
+}
 
 .third_gen li:hover{
     	background: #c8e4f8; color: #000; border: 1px solid #94a0b4;
@@ -45,6 +66,18 @@ border-radius: 5px;
     	background: #c8e4f8; color: #000; border: 1px solid #94a0b4;
     
 }
+/**
+.grandparent{
+    border: 1px solid #ccc;
+	padding: 5px 10px;
+	text-decoration: none;
+	color: #666;
+	font-family: arial, verdana, tahoma;
+	font-size: 11px;
+	display: inline-block;
+	
+	border-radius: 5px;}
+    **/
 
 .third_gen li,.second_gen li {border: 1px solid #ccc;
 	padding: 5px 10px;
