--- a/public_html/CSS/col2.css
+++ b/public_html/CSS/col2.css
@@ -10,3 +10,6 @@ and open the template in the editor.
 #col2 {
     float: right;
   /**  top: -230px **/}
+#col1 {
+    float: right;
+  /**  top: -230px **/}
