--- a/public_html/CSS/border.css
+++ b/public_html/CSS/border.css
@@ -4,15 +4,13 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 */
 /* 
-    Created on : 23-Feb-2017, 12:52:56
+    Created on : 17-Mar-2017, 22:58:59
     Author     : AnthonyQuinn
 */
 
-.highLight{
-        background-color: yellow; 
-
-        color:#E52427;
-        width: 80px;
-    
-    
+.border{
+    color: red;
+    border-style: solid;
+    border-width: 5px
+        
 }
